force-app/main/default/objects/ControlPoint__c/ControlPoint__c.object-meta.xml
<CustomObject>
    <label>Punto de Control</label>
    <nameField>
        <displayFormat>PDC-{00000}</displayFormat>
        <label>Punto de Control</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Control Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>