force-app/main/default/objects/ControlPoint__c/fields/FloorPlan__c.field-meta.xml
<CustomField>
    <fullName>FloorPlan__c</fullName>
    <label>Plano</label>
    <referenceTo>FloorPlan__c</referenceTo>
    <relationshipName>Control_Points</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>