force-app/main/default/objects/ControlPoint__c/fields/LastVisitDate__c.field-meta.xml
<CustomField>
    <fullName>LastVisitDate__c</fullName>
    <label>Última Visita</label>
    <type>Date</type>
</CustomField>