force-app/main/default/objects/ControlPoint__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notas</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>