force-app/main/default/objects/ControlPoint__c/fields/PointType__c.field-meta.xml
<CustomField>
    <fullName>PointType__c</fullName>
    <label>Tipo de Punto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trap</fullName>
            </value>
            <value>
                <fullName>Bait Station</fullName>
            </value>
            <value>
                <fullName>Sensor</fullName>
            </value>
            <value>
                <fullName>Inspection Area</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>