force-app/main/default/objects/ControlPoint__c/fields/XPercent__c.field-meta.xml
<CustomField>
    <fullName>XPercent__c</fullName>
    <label>Posición X</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>