force-app/main/default/objects/ControlPoint__c/fields/YPercent__c.field-meta.xml
<CustomField>
    <fullName>YPercent__c</fullName>
    <label>Posición Y</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>